Added persistent login with Local Storage

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -112,6 +112,8 @@ button:focus-visible {
 
   display: flex;
   gap: 1rem;
+  align-items: center;
+  justify-content: space-between;
 }
 .chatWindow {
   background: var(--chat-window-color);
